Fix some bugs and change package name